--- a/Grimoire/Components/ScriptEdit.razor
+++ b/Grimoire/Components/ScriptEdit.razor
@@ -29,11 +29,21 @@
         <ValidationMessage class="alert" For="@(() => ScriptBlock.Description)" />
     </div>
     <div class="form-group row">
+
         <label class="col-sm-2">Script Group:</label>
-        <InputText id="Group" class="col-sm-10"
+        <InputText id="Group" class="col-sm-4"
                    @bind-Value="@ScriptBlock.Group"
                    placeholder="Enter the script group" />
         <ValidationMessage class="alert" For="@(() => ScriptBlock.Group)" />
+        <label class="col-sm-2">Groups:</label>
+        <InputSelect id="Group" class="col-sm-4"
+                     @bind-Value="@SelectedGroup"
+                     placeholder="Select existing group.">
+            @foreach (string group in ExistingGroups)
+            {
+                <option value=@group>@group</option>
+            }
+        </InputSelect>
     </div>
     <div class="form-group row">
         <label class="col-sm-2">Success Pattern:</label>
@@ -49,7 +59,7 @@
                    placeholder="Enter the start of result filter" />
         <ValidationMessage class="alert" For="@(() => ScriptBlock.ExtractResult.Start)" />
         <label class="col-sm-2">to:</label>
-        <InputText id="Group" class="col-sm-4"
+        <InputText id="Extract" class="col-sm-4"
                    @bind-Value="@ScriptBlock.ExtractResult.End"
                    placeholder="Enter the end of result filter" />
         <ValidationMessage class="alert" For="@(() => ScriptBlock.ExtractResult.End)" />
