--- a/Grimoire/Pages/_Host.cshtml
+++ b/Grimoire/Pages/_Host.cshtml
@@ -14,6 +14,8 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <script type='text/javascript' src="js/jquery-3.5.1.min.js"></script>
+    <script type='text/javascript' src="js/common.js"></script>
 </head>
 <body>
     <header>
