--- a/Grimoire/Components/ScriptEdit.razor
+++ b/Grimoire/Components/ScriptEdit.razor
@@ -25,7 +25,7 @@
         <label class="col-sm-2">Display name:</label>
         <InputText id="Description" class="col-sm-10"
                    @bind-Value="@ScriptBlock.Description"
-                   placeholder="Enter the script description" />
+                   placeholder="Enter the display name" />
         <ValidationMessage class="alert" For="@(() => ScriptBlock.Description)" />
     </div>
     <div class="form-group row">
@@ -49,7 +49,7 @@
         <label class="col-sm-2">Success Pattern:</label>
         <InputText id="Group" class="col-sm-10"
                    @bind-Value="@ScriptBlock.SuccessPatern"
-                   placeholder="Enter the succsess pattern" />
+                   placeholder="Enter the success pattern" />
         <ValidationMessage class="alert" For="@(() => ScriptBlock.SuccessPatern)" />
     </div>
     <div class="form-group row">
